# poke-ssh-bridge-mcp

./: .env.example  .gitignore  README.md  ecosystem.config.cjs  main.py  pyproject.toml  requirements.txt
poke_mcp_ssh_bridge/: ssh_bridge.py
scripts/: start-cloudflared.sh  start.sh
src/: server.py
src/poke_mcp_ssh_bridge/: server.py  ssh_bridge.py
